@@ -49,7 +49,7 @@ __all__ = [
 from pylint.testutils.checker_test_case import CheckerTestCase
 from pylint.testutils.constants import UPDATE_FILE, UPDATE_OPTION
 from pylint.testutils.decorator import set_config
-from pylint.testutils.functional_test_file import FunctionalTestFile
+from pylint.testutils.functional.test_file import FunctionalTestFile
 from pylint.testutils.get_test_info import _get_tests_info
 from pylint.testutils.global_test_linter import linter
 from pylint.testutils.lint_module_test import LintModuleTest
